<resources>
    <string name="app_name">MyNews</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="about_context">MyNews est une application réalisée dans le cadre de la formation développeur Android dispensée par OpenClassroom. Il représente le 4ème projet et permet d\'acquérir les compétences en matière d\'éxécution de taches en arrière plan, d\'écriture de test unitaire, de production de rapport de tests, de mise en place de test unitaires et d\'intégrations.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="technology">Technology</string>
    <string name="notification_channel_id">myCanal</string>
    <string name="notification_channel_title">myTitle</string>
    <string name="notification_channel_desc">this is a test channel</string>
    <string name="channel_description">myChannelDescription</string>
    <string name="channel_name">myChannelName</string>
    <string name="categories">Categories</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="movies">Movies</string>
    <string name="auto">Auto</string>
    <string name="fashion">Fashion</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="search">search</string>
    <string name="enter_your_query">Enter your query</string>
    <string name="search_query_term">Search query term</string>
    <string name="since">Since</string>
    <string name="begin_date">Begin date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="to">To</string>
    <string name="end_date">End date</string>
    <string name="search1">SEARCH</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="context">Context</string>
    <string name="team">TEAM</string>
    <string name="s_bastien_doublet">Sébastien DOUBLET</string>
    <string name="student">Developpeur étudiant</string>
    <string name="erwan_combo">Erwan COMBO</string>
    <string name="mentor">Mentor</string>
    <string name="licenses">Licenses</string>
    <string name="about_context_text">MyNews est une application réalisée dans le cadre de la formation développeur Android dispensée par OpenClassroom. Il représente le 5ème projet et permet d\'acquérir les compétences en matière d\'éxécution de taches en arrière plan, d\'écriture de test unitaire, de production de rapport de tests, de mise en place de test unitaires et d\'intégrations.</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="licence_nyt_text">L\'ensemble des articles contenus dans cette application proviennent du New York Times.Pour plus d\'informations, vous pouvez vous rendre sur le site du New York Times Developers en cliquant sur le lien ci-dessous.</string>


</resources>
