<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_toolbar_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/enter_your_query"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/query_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/search_query_term"
            android:imeOptions="actionDone"
            android:inputType="textFilter"
            android:padding="20dp"
            android:singleLine="true"
            tools:ignore="Autofill" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/checkbox_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/checkbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/since_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/since"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/begin_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/begin_date"
                android:inputType="date"
                tools:text="@tools:sample/date/ddmmyy"
                tools:ignore="Autofill" />



            <CheckBox
                android:id="@+id/checkbox_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:text="@string/arts" />

            <CheckBox
                android:id="@+id/checkbox_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/business"
                android:checked="false"/>


            <CheckBox
                android:id="@+id/checkbox_entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/entrepreneurs"
                android:checked="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/to_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/to"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/end_date"
                android:inputType="date"
                tools:text="@tools:sample/date/ddmmyy"
                tools:ignore="Autofill" />


            <CheckBox
                android:id="@+id/checkbox_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/politics"
                android:checked="false"/>

            <CheckBox
                android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sports"
                android:checked="false"/>

            <CheckBox
                android:id="@+id/checkbox_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/travel"
                android:checked="false"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/search_articles_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:text="@string/search1"
        android:textColor="@color/colorTitle" />

    <LinearLayout
        android:id="@+id/switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_notifications_once_per_day"
            android:layout_marginStart="10dp"/>

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp" />

    </LinearLayout>
</LinearLayout>